<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:fillViewport="true"
    android:orientation="vertical"
    tools:context=".UsersProfileActivity">

    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/profile_lbl"
            android:textSize="28sp"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/profilefirst_name_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:hint="@string/first_name"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:singleLine="true"
            android:maxLines="1"
            android:padding="10dp" />


        <EditText
            android:id="@+id/profileusername_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="@string/userName"
            android:maxLines="1"

            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:singleLine="true"
            android:padding="10dp" />

        <EditText
            android:id="@+id/profileemail_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="@string/email"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:singleLine="true"
            android:maxLines="1"
            android:enabled="false"
            android:padding="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/profile_update_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_weight="1"
                android:visibility="gone"
                android:text="@string/update_profile"
                android:textColor="@color/white"
                />
        </LinearLayout>
    </LinearLayout>
</ScrollView>