<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    tools:context=".RegistrationActivity">

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical"
        tools:context=".RegistrationActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="Register Here"
            android:textSize="28sp"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/reg_first_name_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:hint="@string/first_name"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:maxLines="1"
            android:singleLine="true"
            android:padding="10dp" />


        <EditText
            android:id="@+id/reg_username_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="@string/userName"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:maxLines="1"
            android:singleLine="true"
            android:padding="10dp" />

        <EditText
            android:id="@+id/reg_email_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="@string/email"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:maxLines="1"
            android:singleLine="true"
            android:padding="10dp" />

        <EditText
            android:id="@+id/reg_password_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="@string/password"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:singleLine="true"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="10dp" />
        <Spinner
            android:id="@+id/reg_reg_type_sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:maxLines="1"
            android:background="@color/white"
            android:padding="10dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/register_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_weight="1"
                android:text="@string/register" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>